# localcharger

./: CMakeLists.txt  README.md  localcharger.pro  websender.cpp  websender.h
src/android/: AndroidManifest.xml
src/android/res/drawable/: splashscreen.xml
src/cli/: CMakeLists.txt  clicontroller.cpp  clicontroller.h  maincli.cpp
src/core/: CMakeLists.txt  jsonparser.cpp  jsonparser.h  main.cpp  threadworker.cpp  threadworker.h  webidentifier.cpp  webidentifier.h  webrecver.cpp  webrecver.h  websender.cpp  websender.h  websocketwatcher.cpp  websocketwatcher.h
src/daemon/: CMakeLists.txt  daemon.cpp  daemon.h  maindaemon.cpp
src/gui/: CMakeLists.txt  mainui.cpp  mainui.h  mainui.ui
src/include/: CMakeLists.txt  defines.h  proxystyle.h
src/qml/: CMakeLists.txt  qml.pri  qmlhandler.cpp  qmlhandler.h
src/qml/resource/: qmlfiles.qrc
src/qml/resource/qmlfiles/: MainConfigPage.qml  MainUi.qml  MainWorkPage.qml
src/qml/resource/qmlfiles/widget/: ButtonEx.qml  ComboBoxEx.qml  FileDialogEx.qml  GroupBoxEx.qml  ProgressBarEx.qml  RectangleEx.qml  SeparatorEx.qml  SwitchEx.qml  TabButtonEx.qml  TextAreaEx.qml  TextFieldEx.qml  TextInputEx.qml
src/resource/: CMakeLists.txt  config.qrc  localcharger.rc  pic.qrc  translation.qrc
src/resource/config/: LocalChargerDaemon.service  th000.localcharger.daemon.conf
src/resource/stylesheet/: stylesheet.css
src/resource/translation/: localcharger_en.qm  localcharger_en.ts  localcharger_zh_CN.qm  localcharger_zh_CN.ts
src/utils/: CMakeLists.txt  filehelper.cpp  filehelper.h  networkinfohelper.cpp  networkinfohelper.h  randomgenerator.cpp  randomgenerator.h
src/utils/style/: proxystyle.cpp
src/utils/widget/: CMakeLists.txt  messageboxexx.cpp  messageboxexx.ui  texteditex.cpp  texteditex.h
